# dual_autodiff

./: README.md  dual_autodiff.ipynb  pyproject.toml
Docker-Test/: Dockerfile  TutorialNotebook_x.ipynb
Docker-Test/wheelhouse/: dual_autodiff_x-0.0.1b2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
docs/source/: TutorialNotebook.ipynb  api_reference.rst  conf.py  index.rst  tutorials.rst
dual_autodiff/: __init__.py  dual.py  task5.ipynb
dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt
dual_autodiff/tests/: autodiff_tools.py
dual_autodiff_x/: dual.c  dual.pyx  pyproject.toml  setup.py
dual_autodiff_x/dual_autodiff_x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.0.1b2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
report/: reference.bib  report.tex
